--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-parallax-tilt": "^1.7.225",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.8",
     "typewriter-effect": "^2.21.0",
