--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://ze3ck.github.io/portfolio",
-  "name": "portfolio",
+  "homepage": "https://ze3ck.github.io/portfolio/",
+  "name": "ortfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
